# a2a

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
cs_agent/: Dockerfile  agent.py  calc_gate.py  calculator.py  env_toolset.py  ingest.py  main.py  precompute_embeddings.py  rag_tools.py  reconcile_tool.py  tool_recency.py  verify_gate.py
kb/: policy.md
personal_agent/: Dockerfile  agent.py  cs_client_tool.py  main.py  requirements.txt
tests/rag/: RESULTS.md  build_gold.py  eval.py  experiment.py  experiment_probe.py  gold.jsonl  harness.py  metrics.py  real_queries.jsonl  test_rag.py  validate_hybrid.py
