[project]
name = "a2a-hackathon-template"
version = "0.1.0"
description = "A2A Hackathon two-agent starter (personal-agent + cs-agent)"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a]>=1.10",
    "a2a-sdk[http-server]>=0.3.4,<0.4",
    "httpx>=0.27",
    "uvicorn>=0.34",
    # cs-agent only
    "redis>=5.0",
    "google-genai>=1.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false
